add seat functionalities to the api seat index vue file

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10928,3 +10928,19 @@ a.text-dark:focus {
   }
 }
 
+#room {
+  display: flex;
+}
+
+.seat {
+  width: 30px;
+  border: 1px solid #626b6f;
+  margin: 3px;
+  border-radius: 10px 10px 0 0;
+  cursor: pointer;
+}
+
+.seat.selected {
+  background: #a5beef;
+}
+
