--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,3 +22,11 @@
 .seat.selected {
     background: #a5beef;
 }
+
+.seat.paid {
+    background: #ec2323;
+}
+
+.seat.reserved {
+    background: #bd6d6d;
+}
