in Reservation.php fixing existsWithSeats method

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10946,9 +10946,11 @@ a.text-dark:focus {
 
 .seat.paid {
   background: #ec2323;
+  cursor: not-allowed;
 }
 
 .seat.reserved {
   background: #bd6d6d;
+  cursor: not-allowed;
 }
 
